- EntityGraphExtractor added