@@ -6,7 +6,6 @@ import lombok.experimental.UtilityClass;
 import org.springframework.beans.BeanUtils;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @UtilityClass
 public class Mapper {
@@ -31,15 +30,9 @@ public class Mapper {
     }
 
     public static List<ChatDto> of(List<Chat> chatList) {
-        List<ChatDto> dtoList = chatList.stream()
+        return chatList.stream()
                 .map(Mapper::of)
-                .collect(Collectors.toList());
-
-        // пока что закостылим
-        dtoList.forEach(chatDto -> chatDto.getHistoryList().forEach(history -> history.setChat(null)));
-        dtoList.forEach(chatDto -> chatDto.getSubscriptions().forEach(subscription -> subscription.setChats(null)));
-        dtoList.forEach(chatDto -> chatDto.getUserInfo().setChat(null));
-
-        return dtoList;
+                .toList();
     }
+
 }
